Fixed off-centered tables.

--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -114,7 +114,7 @@
   padding: 15px;
 	font-size: 28px;
 	margin: 30px;
-	left: 29%;
+	left: 23%;
 	width: 50%;
 	border-collapse: separate;
   border-spacing: 2px;
